@@ -832,6 +832,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5210)  preload parser should parse <noinclude> (as well as <includeonly>)
 * (bug 8785)  Pipe trick should work with colon functions 
 * (bug 4099)  Pipe trick doesn't work when emptiness is only provided by empty template parameter 
+* (bug 845)   [[#foo|]], [[/bar|]] should be equivalent to [[#foo|foo]], [[/bar|bar]] (new use of "pipe trick")
+* (bug 21660) Support full-width commas for pipe trick
 
 === Languages updated in 1.16 ===
 
